--- a/AphasiaClusteringExperiment/Clustering.ipynb
+++ b/AphasiaClusteringExperiment/Clustering.ipynb
@@ -10,15 +10,7 @@
     "## Данные\n",
     "Данные взяты из НКРЯ (поиск по биграммам и триграммам).\n",
     "### Запрос:\n",
-    "Формат запроса для биграммов:\n",
-    "\n",
-    "Прямое дополнение:\n",
-    "\n",
-    "http://search.ruscorpora.ru/search.xml?env=sas1_2&mycorp=&mysent=&mysize=&mysentsize=&dpp=100&spp=100&spd=100&text=lexgramm&mode=ngrams_2_lexgr&sort=gr_freq&lang=ru&nodia=1&parent1=0&level1=0&lex1=&gramm1=V%2Ctran&flags1=&parent2=0&level2=0&min2=1&max2=1&lex2=LEMME&gramm2=%28gen%7Cgen2%7Cdat%7Cacc%7Cacc2%7Cins%29&flags2=\n",
-    "\n",
-    "Дополнение с предлогом:\n",
-    "\n",
-    "http://search.ruscorpora.ru/search.xml?env=sas1_2&mycorp=&mysent=&mysize=&mysentsize=&dpp=100&spp=100&spd=100&text=lexgramm&mode=ngrams_3_lexgr&sort=gr_freq&lang=ru&nodia=1&parent1=0&level1=0&lex1=&gramm1=V&flags1=&parent2=0&level2=0&min2=1&max2=1&lex2=&gramm2=PR&flags2=&parent3=0&level3=0&min3=1&max3=1&lex3=LEMME&gramm3=&flags3=\n",
+    "Обращение к данным происходит путем подстановки леммы в заранее сформированный запрос (см. reference.txt), извлечение данных - с помощью XPath.\n",
     "\n",
     "### Существительные:\n",
     "В качестве леммы в запросе к корпусу использовались существительные, собранные нами из пособий, а также те слова, которые были получены в результате прошлого интерактива.\n",
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -108,14 +100,61 @@
     "    else:\n",
     "        return BIGRAM_LINK.format(encoded)\n",
     "\n",
+    "def extract_words_freqs(bi_page, tri_page):\n",
+    "    \"\"\"\n",
+    "    Извлекает из текста страницы глаголы/глаголы с предлогами и возвращает в виде словаря, где глаголы - ключи, частоты - \n",
+    "    значения.\n",
+    "    \"\"\"\n",
+    "    output = dict()\n",
+    "    bi_tree = lxml.html.fromstring(bi_page)\n",
+    "    # обходим таблицу на странице по строкам\n",
+    "    for tr in bi_tree.iter('tr'):\n",
+    "        # прямо в ячейках живут цифры (номер пп. и частотность)\n",
+    "        print(str(tr.xpath(\".//td/text()\")))\n",
+    "        # в тегах span живут слова\n",
+    "        print(str(tr.xpath(\".//td/span/text()\")))\n",
+    "    return output\n",
+    "\n",
     "def loader(words):\n",
+    "    output = dict()\n",
     "    for word in words:\n",
     "        bi_loaded, bi_page, code = load_page(create_link(word, False))\n",
     "        tri_loaded, tri_page, code = load_page(create_link(word, True))\n",
     "        if bi_loaded and tri_loaded:\n",
+    "            output[word] = extract_words_freqs(bi_page, tri_page)\n",
     "            \n",
     "        \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['27', '15', '13', ' ', ' ', ' ']\n",
+      "['любили', 'отца']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_words_freqs('<tr><td align=\"right\">27</td><td align=\"right\">15</td><td align=\"right\">13</td><td width=\"100%\"> <span class=\"b-wrd-expl g-em\" explain=\"%D0%BB%D1%8E%D0%B1%D0%B8%D0%BB%D0%B8%7C134%7C10%7C0%7C0%7C0%7C0%7C0\">любили</span> <span class=\"b-wrd-expl g-em\" explain=\"%D0%BE%D1%82%D1%86%D0%B0%7C1087%7C1%7C0%7C0%7C0%7C0%7C0\">отца</span> </td></tr>', \"\")\n"
    ]
   }
  ],
