--- a/AphasiaClusteringExperiment/Clustering.ipynb
+++ b/AphasiaClusteringExperiment/Clustering.ipynb
@@ -31,25 +31,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "\"\"\"\n",
+    "Spyder Editor\n",
+    "\n",
+    "This is a temporary script file.\n",
+    "\"\"\"\n",
+    "\n",
     "import lxml.html\n",
     "import urllib.request\n",
     "import urllib.error\n",
     "import urllib.parse\n",
+    "import pymorphy2\n",
     "\n",
-    "BIGRAM_LINK =  \"http://search.ruscorpora.ru/search.xml?env=sas1_2&mycorp=&mysent=\" \\\n",
-    "               \"&mysize=&mysentsize=&dpp=100&spp=100&spd=100&text=lexgramm&mode=ngrams_2_lexgr&sort=gr_freq&\" \\\n",
-    "               \"lang=ru&nodia=1&parent1=0&level1=0&lex1=&gramm1=V%2Ctran&flags1=&parent2=0&level2=0&min2=1\" \\\n",
-    "               \"&max2=1&lex2={0}&gramm2=%28gen%7Cgen2%7Cdat%7Cacc%7Cacc2%7Cins%29&flags2=\"\n",
-    "TRIGRAM_LINK = \"http://search.ruscorpora.ru/search.xml?env=sas1_2&mycorp=&mysent=\" \\\n",
-    "               \"&mysize=&mysentsize=&dpp=100&spp=100&spd=100&text=lexgramm&mode=ngrams_3_lexgr&sort=gr_freq\" \\\n",
-    "               \"&lang=ru&nodia=1&parent1=0&level1=0&lex1=&gramm1=V&flags1=&parent2=0&level2=0&min2=1\" \\\n",
-    "               \"&max2=1&lex2=&gramm2=PR&flags2=&parent3=0&level3=0&min3=1&max3=1&lex3={0}&gramm3=&flags3=\"\n",
+    "morph = pymorphy2.MorphAnalyzer()\n",
+    "\n",
+    "BIGRAM_LINK = \"http://search.ruscorpora.ru/search.xml?env=sas1_2&mycorp=&mysent=&mysize=&mysentsize=\" \\\n",
+    "              \"&dpp=100&spp=100&spd=100&text=lexgramm&mode=ngrams_2_lexgr&sort=gr_freq&lang=ru&nodia=1\" \\\n",
+    "              \"&parent1=0&level1=0&lex1=&gramm1=V%2Ctran&flags1=&parent2=0&level2=0&min2=1&max2=1&lex2={0}\" \\\n",
+    "              \"&gramm2=%28gen%7Cgen2%7Cdat%7Cacc%7Cacc2%7Cins%29&flags2=\"\n",
+    "TRIGRAM_LINK = \"http://search.ruscorpora.ru/search.xml?env=sas1_2&mycorp=&mysent=&mysize=&mysentsize=\" \\\n",
+    "               \"&dpp=100&spp=100&spd=100&text=lexgramm&mode=ngrams_3_lexgr&sort=gr_freq&lang=ru&nodia=1\" \\\n",
+    "               \"&parent1=0&level1=0&lex1=&gramm1=V&flags1=&parent2=0&level2=0&min2=1&max2=1&lex2=&gramm2=\" \\\n",
+    "               \"PR&flags2=&parent3=0&level3=0&min3=1&max3=1&lex3={0}&gramm3=&flags3=\"\n",
     "\n",
     "agent_name = \"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36\"\n",
     "            \n",
@@ -64,7 +74,7 @@
     "    :return: tuple: a boolean showing success, content of the page (or error message), and http code if available (or 0)\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        req = urllib.request.Request(urllib.parse.quote(url, safe=\":/&=?\"), headers={'User-Agent': agent_name})\n",
+    "        req = urllib.request.Request(urllib.parse.quote(url, safe=\":/&=?%\"), headers={'User-Agent': agent_name})\n",
     "        with urllib.request.urlopen(req) as r:\n",
     "            code = r.getcode()\n",
     "            page = r.read().decode(encoding)\n",
@@ -87,49 +97,81 @@
     "    \"\"\"\n",
     "    Загрузка списка слов\n",
     "    \"\"\"\n",
-    "    words = list(\"foo\")\n",
+    "    words = ['автобус', \"собака\"]\n",
     "    return words\n",
     "\n",
     "def create_link(word, is_trigram=False):\n",
     "    \"\"\"\n",
     "    Создает ссылки на страницы в соответствии с необходимым запросом\n",
     "    \"\"\"\n",
-    "    encoded = urllib.parse.quote(word)\n",
     "    if is_trigram:\n",
-    "        return TRIGRAM_LINK.format(encoded)\n",
+    "        return TRIGRAM_LINK.format(word)\n",
     "    else:\n",
-    "        return BIGRAM_LINK.format(encoded)\n",
+    "        return BIGRAM_LINK.format(word)\n",
+    "\n",
+    "def lemma(token, morph):\n",
+    "    parse = morph.parse(token)\n",
+    "    for p in parse:\n",
+    "        if 'VERB' in p.tag:\n",
+    "            return True, p.normal_form\n",
+    "    return False, \"\"\n",
     "\n",
     "def extract_words_freqs(bi_page, tri_page):\n",
     "    \"\"\"\n",
     "    Извлекает из текста страницы глаголы/глаголы с предлогами и возвращает в виде словаря, где глаголы - ключи, частоты - \n",
     "    значения.\n",
     "    \"\"\"\n",
-    "    output = dict()\n",
+    "    output_dict = dict()\n",
     "    bi_tree = lxml.html.fromstring(bi_page)\n",
     "    # обходим таблицу на странице по строкам\n",
     "    for tr in bi_tree.iter('tr'):\n",
     "        # прямо в ячейках живут цифры (номер пп. и частотность)\n",
-    "        print(str(tr.xpath(\".//td/text()\")))\n",
+    "        td_text = tr.xpath(\".//td/text()\")\n",
+    "        if not td_text:\n",
+    "            continue\n",
     "        # в тегах span живут слова\n",
-    "        print(str(tr.xpath(\".//td/span/text()\")))\n",
-    "    return output\n",
+    "        span_text = tr.xpath(\".//td/span/text()\")\n",
+    "        freq = int(td_text[1])\n",
+    "        token = span_text[0]\n",
+    "        is_verb, word = lemma(token, morph)\n",
+    "        if is_verb:\n",
+    "            if word in list(output_dict.keys()):\n",
+    "                output_dict[word] = output_dict[word] + freq\n",
+    "            else:\n",
+    "                output_dict[word] = freq\n",
+    "    tri_tree = lxml.html.fromstring(tri_page)\n",
+    "    # переходим к триграммам\n",
+    "    for tr in tri_tree.iter('tr'):\n",
+    "        td_text = tr.xpath(\".//td/text()\")\n",
+    "        if not td_text:\n",
+    "            continue\n",
+    "        # в тегах span живут слова\n",
+    "        span_text = tr.xpath(\".//td/span/text()\")\n",
+    "        freq = int(td_text[1])\n",
+    "        token = span_text[0]\n",
+    "        is_verb, word = lemma(token, morph)\n",
+    "        prep_phrase = word + \" \" + span_text[1]\n",
+    "        if is_verb:\n",
+    "            if prep_phrase in list(output_dict.keys()):\n",
+    "                output_dict[prep_phrase] = output_dict[prep_phrase] + freq\n",
+    "            else:\n",
+    "                output_dict[prep_phrase] = freq\n",
+    "    return output_dict\n",
     "\n",
     "def loader(words):\n",
-    "    output = dict()\n",
+    "    output_dict = dict()\n",
     "    for word in words:\n",
+    "        print(word)\n",
     "        bi_loaded, bi_page, code = load_page(create_link(word, False))\n",
     "        tri_loaded, tri_page, code = load_page(create_link(word, True))\n",
     "        if bi_loaded and tri_loaded:\n",
-    "            output[word] = extract_words_freqs(bi_page, tri_page)\n",
-    "            \n",
-    "        \n",
-    "\n"
+    "            output_dict[word] = extract_words_freqs(bi_page, tri_page)\n",
+    "    return output_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -138,23 +180,185 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['27', '15', '13', ' ', ' ', ' ']\n",
-      "['любили', 'отца']\n"
+      "автобус\n",
+      "собака\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{}"
+       "{'автобус': {'атаковать': 1,\n",
+       "  'беречь': 1,\n",
+       "  'брать': 1,\n",
+       "  'быть': 9,\n",
+       "  'быть в': 4,\n",
+       "  'вести': 5,\n",
+       "  'взорвать': 1,\n",
+       "  'взять': 1,\n",
+       "  'видеть': 3,\n",
+       "  'влезать в': 3,\n",
+       "  'влезть в': 4,\n",
+       "  'водить': 3,\n",
+       "  'возить': 3,\n",
+       "  'войти в': 9,\n",
+       "  'вскочить в': 5,\n",
+       "  'вставить': 1,\n",
+       "  'выводить': 1,\n",
+       "  'выделить': 1,\n",
+       "  'выделять': 1,\n",
+       "  'вызвать': 1,\n",
+       "  'вызывать': 1,\n",
+       "  'выйти из': 35,\n",
+       "  'выпить': 1,\n",
+       "  'выскочить из': 6,\n",
+       "  'выходить из': 4,\n",
+       "  'глядеть': 1,\n",
+       "  'говорить': 1,\n",
+       "  'голосовать': 1,\n",
+       "  'давать': 3,\n",
+       "  'дать': 2,\n",
+       "  'два-тереть': 1,\n",
+       "  'добывать': 1,\n",
+       "  'догнать': 1,\n",
+       "  'догонять': 2,\n",
+       "  'ездить в': 3,\n",
+       "  'ездить на': 3,\n",
+       "  'ехать в': 64,\n",
+       "  'ехать на': 8,\n",
+       "  'ждать': 36,\n",
+       "  'зайти в': 3,\n",
+       "  'залезть в': 3,\n",
+       "  'захватить': 5,\n",
+       "  'заходить в': 3,\n",
+       "  'идти к': 4,\n",
+       "  'мчать': 2,\n",
+       "  'остановить': 3,\n",
+       "  'отходить': 2,\n",
+       "  'пересесть в': 3,\n",
+       "  'погрузить в': 3,\n",
+       "  'подавать': 3,\n",
+       "  'подать': 5,\n",
+       "  'подкатить': 7,\n",
+       "  'поехать на': 11,\n",
+       "  'полезть в': 3,\n",
+       "  'посадить в': 8,\n",
+       "  'послать к': 3,\n",
+       "  'поставить': 2,\n",
+       "  'потолочь': 2,\n",
+       "  'привезти на': 3,\n",
+       "  'привозить на': 2,\n",
+       "  'приехать на': 3,\n",
+       "  'прийтись на': 2,\n",
+       "  'садиться в': 29,\n",
+       "  'сажать в': 4,\n",
+       "  'сбить': 3,\n",
+       "  'сесть в': 64,\n",
+       "  'сесть на': 7,\n",
+       "  'сидеть в': 16,\n",
+       "  'сидеть внутри': 2,\n",
+       "  'сойти с': 8,\n",
+       "  'спасть в': 4,\n",
+       "  'тереть': 3,\n",
+       "  'трястись в': 4,\n",
+       "  'увидеть': 2,\n",
+       "  'усесться в': 2},\n",
+       " 'собака': {'бить': 3,\n",
+       "  'бросать': 3,\n",
+       "  'броситься за': 2,\n",
+       "  'броситься к': 3,\n",
+       "  'броситься на': 3,\n",
+       "  'бывать у': 4,\n",
+       "  'быть': 16,\n",
+       "  'быть у': 2,\n",
+       "  'вешать': 3,\n",
+       "  'взглянуть на': 2,\n",
+       "  'взять': 9,\n",
+       "  'видеть': 10,\n",
+       "  'возиться с': 2,\n",
+       "  'вспомнить о': 2,\n",
+       "  'выгуливать': 4,\n",
+       "  'вызывать у': 4,\n",
+       "  'выйти с': 2,\n",
+       "  'выродиться в': 2,\n",
+       "  'выходить с': 2,\n",
+       "  'гладить': 4,\n",
+       "  'говорить': 12,\n",
+       "  'гулять с': 16,\n",
+       "  'давать': 8,\n",
+       "  'дать': 7,\n",
+       "  'делать': 4,\n",
+       "  'держать': 10,\n",
+       "  'драться с': 2,\n",
+       "  'думать о': 3,\n",
+       "  'дурнуть': 4,\n",
+       "  'ездить на': 15,\n",
+       "  'ездить с': 5,\n",
+       "  'есть': 18,\n",
+       "  'заговорить о': 2,\n",
+       "  'заметить': 4,\n",
+       "  'затравить': 5,\n",
+       "  'играть с': 2,\n",
+       "  'идти': 5,\n",
+       "  'идти о': 2,\n",
+       "  'идти с': 2,\n",
+       "  'кормить': 10,\n",
+       "  'крикнуть на': 2,\n",
+       "  'лаять': 464,\n",
+       "  'любить': 48,\n",
+       "  'найти': 8,\n",
+       "  'накормить': 4,\n",
+       "  'напасть на': 2,\n",
+       "  'находиться перед': 3,\n",
+       "  'носиться по': 2,\n",
+       "  'образовать у': 2,\n",
+       "  'окликнуть': 4,\n",
+       "  'оперировать на': 2,\n",
+       "  'отбиваться от': 2,\n",
+       "  'относиться к': 2,\n",
+       "  'отозвать': 4,\n",
+       "  'отойти к': 2,\n",
+       "  'охотиться с': 4,\n",
+       "  'повестить о': 2,\n",
+       "  'погладить': 13,\n",
+       "  'поглядеть на': 2,\n",
+       "  'подвывать': 4,\n",
+       "  'подозвать': 4,\n",
+       "  'подойти к': 8,\n",
+       "  'подходить к': 2,\n",
+       "  'позвать': 4,\n",
+       "  'покоситься на': 2,\n",
+       "  'попробовать на': 2,\n",
+       "  'портить': 4,\n",
+       "  'посмотреть на': 4,\n",
+       "  'потрепать': 6,\n",
+       "  'походить на': 10,\n",
+       "  'превращаться в': 2,\n",
+       "  'прикрикнуть на': 7,\n",
+       "  'прогнать': 5,\n",
+       "  'пускать с': 2,\n",
+       "  'рассказать о': 2,\n",
+       "  'свистнуть': 9,\n",
+       "  'смотреть на': 14,\n",
+       "  'спасть': 5,\n",
+       "  'таскать': 4,\n",
+       "  'тереть': 35,\n",
+       "  'травить': 13,\n",
+       "  'убить': 6,\n",
+       "  'увидеть': 9,\n",
+       "  'указать на': 2,\n",
+       "  'укусить': 4,\n",
+       "  'уходить с': 2,\n",
+       "  'ходить с': 4,\n",
+       "  'цыкнуть на': 3}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "extract_words_freqs('<tr><td align=\"right\">27</td><td align=\"right\">15</td><td align=\"right\">13</td><td width=\"100%\"> <span class=\"b-wrd-expl g-em\" explain=\"%D0%BB%D1%8E%D0%B1%D0%B8%D0%BB%D0%B8%7C134%7C10%7C0%7C0%7C0%7C0%7C0\">любили</span> <span class=\"b-wrd-expl g-em\" explain=\"%D0%BE%D1%82%D1%86%D0%B0%7C1087%7C1%7C0%7C0%7C0%7C0%7C0\">отца</span> </td></tr>', \"\")\n"
+    "loader(load_words(\"\"))"
    ]
   }
  ],
@@ -174,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
