--- a/AphasiaClusteringExperiment/Clustering.ipynb
+++ b/AphasiaClusteringExperiment/Clustering.ipynb
@@ -37,18 +37,12 @@
    },
    "outputs": [],
    "source": [
-    "# -*- coding: utf-8 -*-\n",
-    "\"\"\"\n",
-    "Spyder Editor\n",
-    "\n",
-    "This is a temporary script file.\n",
-    "\"\"\"\n",
-    "\n",
     "import lxml.html\n",
     "import urllib.request\n",
     "import urllib.error\n",
     "import urllib.parse\n",
     "import pymorphy2\n",
+    "import json\n",
     "\n",
     "morph = pymorphy2.MorphAnalyzer()\n",
     "\n",
@@ -93,11 +87,19 @@
     "        loaded = False\n",
     "    return loaded, page, code\n",
     "\n",
-    "def load_words(path):\n",
+    "def load_words():\n",
     "    \"\"\"\n",
     "    Загрузка списка слов\n",
     "    \"\"\"\n",
-    "    words = ['автобус', \"собака\"]\n",
+    "    with open(\"w1.txt\", \"r\") as f:\n",
+    "        txt = f.read()\n",
+    "        words1 = txt.split(\"\\n\")\n",
+    "        words1 = [w.strip().lower() for w in words1]\n",
+    "    with open(\"w2.txt\", \"r\") as f:\n",
+    "        txt = f.read()\n",
+    "        words2 = txt.split(\"\\n\")\n",
+    "        words2 = [w.strip().lower() for w in words2]\n",
+    "    words = set(words1 + words2)\n",
     "    return words\n",
     "\n",
     "def create_link(word, is_trigram=False):\n",
@@ -160,206 +162,37 @@
     "\n",
     "def loader(words):\n",
     "    output_dict = dict()\n",
+    "    counter = 1\n",
     "    for word in words:\n",
-    "        print(word)\n",
+    "        print(\"Dumping data for {0}.\".format(word))\n",
     "        bi_loaded, bi_page, code = load_page(create_link(word, False))\n",
     "        tri_loaded, tri_page, code = load_page(create_link(word, True))\n",
     "        if bi_loaded and tri_loaded:\n",
     "            output_dict[word] = extract_words_freqs(bi_page, tri_page)\n",
-    "    return output_dict"
+    "            print(\"[{0}] Completed.\".format(str(counter)))\n",
+    "            counter += 1\n",
+    "    return output_dict\n",
+    "\n",
+    "def dumper():\n",
+    "    print(\"Starting the job\")\n",
+    "    words = list(load_words())\n",
+    "    print(\"Wordlist is loaded: {0} entries\".format(str(len(words))))\n",
+    "    loaded = loader(words)\n",
+    "    with open(\"out.json\", \"w\") as w:\n",
+    "        json.dump(loaded, w)\n",
+    "    return loaded\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "автобус\n",
-      "собака\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'автобус': {'атаковать': 1,\n",
-       "  'беречь': 1,\n",
-       "  'брать': 1,\n",
-       "  'быть': 9,\n",
-       "  'быть в': 4,\n",
-       "  'вести': 5,\n",
-       "  'взорвать': 1,\n",
-       "  'взять': 1,\n",
-       "  'видеть': 3,\n",
-       "  'влезать в': 3,\n",
-       "  'влезть в': 4,\n",
-       "  'водить': 3,\n",
-       "  'возить': 3,\n",
-       "  'войти в': 9,\n",
-       "  'вскочить в': 5,\n",
-       "  'вставить': 1,\n",
-       "  'выводить': 1,\n",
-       "  'выделить': 1,\n",
-       "  'выделять': 1,\n",
-       "  'вызвать': 1,\n",
-       "  'вызывать': 1,\n",
-       "  'выйти из': 35,\n",
-       "  'выпить': 1,\n",
-       "  'выскочить из': 6,\n",
-       "  'выходить из': 4,\n",
-       "  'глядеть': 1,\n",
-       "  'говорить': 1,\n",
-       "  'голосовать': 1,\n",
-       "  'давать': 3,\n",
-       "  'дать': 2,\n",
-       "  'два-тереть': 1,\n",
-       "  'добывать': 1,\n",
-       "  'догнать': 1,\n",
-       "  'догонять': 2,\n",
-       "  'ездить в': 3,\n",
-       "  'ездить на': 3,\n",
-       "  'ехать в': 64,\n",
-       "  'ехать на': 8,\n",
-       "  'ждать': 36,\n",
-       "  'зайти в': 3,\n",
-       "  'залезть в': 3,\n",
-       "  'захватить': 5,\n",
-       "  'заходить в': 3,\n",
-       "  'идти к': 4,\n",
-       "  'мчать': 2,\n",
-       "  'остановить': 3,\n",
-       "  'отходить': 2,\n",
-       "  'пересесть в': 3,\n",
-       "  'погрузить в': 3,\n",
-       "  'подавать': 3,\n",
-       "  'подать': 5,\n",
-       "  'подкатить': 7,\n",
-       "  'поехать на': 11,\n",
-       "  'полезть в': 3,\n",
-       "  'посадить в': 8,\n",
-       "  'послать к': 3,\n",
-       "  'поставить': 2,\n",
-       "  'потолочь': 2,\n",
-       "  'привезти на': 3,\n",
-       "  'привозить на': 2,\n",
-       "  'приехать на': 3,\n",
-       "  'прийтись на': 2,\n",
-       "  'садиться в': 29,\n",
-       "  'сажать в': 4,\n",
-       "  'сбить': 3,\n",
-       "  'сесть в': 64,\n",
-       "  'сесть на': 7,\n",
-       "  'сидеть в': 16,\n",
-       "  'сидеть внутри': 2,\n",
-       "  'сойти с': 8,\n",
-       "  'спасть в': 4,\n",
-       "  'тереть': 3,\n",
-       "  'трястись в': 4,\n",
-       "  'увидеть': 2,\n",
-       "  'усесться в': 2},\n",
-       " 'собака': {'бить': 3,\n",
-       "  'бросать': 3,\n",
-       "  'броситься за': 2,\n",
-       "  'броситься к': 3,\n",
-       "  'броситься на': 3,\n",
-       "  'бывать у': 4,\n",
-       "  'быть': 16,\n",
-       "  'быть у': 2,\n",
-       "  'вешать': 3,\n",
-       "  'взглянуть на': 2,\n",
-       "  'взять': 9,\n",
-       "  'видеть': 10,\n",
-       "  'возиться с': 2,\n",
-       "  'вспомнить о': 2,\n",
-       "  'выгуливать': 4,\n",
-       "  'вызывать у': 4,\n",
-       "  'выйти с': 2,\n",
-       "  'выродиться в': 2,\n",
-       "  'выходить с': 2,\n",
-       "  'гладить': 4,\n",
-       "  'говорить': 12,\n",
-       "  'гулять с': 16,\n",
-       "  'давать': 8,\n",
-       "  'дать': 7,\n",
-       "  'делать': 4,\n",
-       "  'держать': 10,\n",
-       "  'драться с': 2,\n",
-       "  'думать о': 3,\n",
-       "  'дурнуть': 4,\n",
-       "  'ездить на': 15,\n",
-       "  'ездить с': 5,\n",
-       "  'есть': 18,\n",
-       "  'заговорить о': 2,\n",
-       "  'заметить': 4,\n",
-       "  'затравить': 5,\n",
-       "  'играть с': 2,\n",
-       "  'идти': 5,\n",
-       "  'идти о': 2,\n",
-       "  'идти с': 2,\n",
-       "  'кормить': 10,\n",
-       "  'крикнуть на': 2,\n",
-       "  'лаять': 464,\n",
-       "  'любить': 48,\n",
-       "  'найти': 8,\n",
-       "  'накормить': 4,\n",
-       "  'напасть на': 2,\n",
-       "  'находиться перед': 3,\n",
-       "  'носиться по': 2,\n",
-       "  'образовать у': 2,\n",
-       "  'окликнуть': 4,\n",
-       "  'оперировать на': 2,\n",
-       "  'отбиваться от': 2,\n",
-       "  'относиться к': 2,\n",
-       "  'отозвать': 4,\n",
-       "  'отойти к': 2,\n",
-       "  'охотиться с': 4,\n",
-       "  'повестить о': 2,\n",
-       "  'погладить': 13,\n",
-       "  'поглядеть на': 2,\n",
-       "  'подвывать': 4,\n",
-       "  'подозвать': 4,\n",
-       "  'подойти к': 8,\n",
-       "  'подходить к': 2,\n",
-       "  'позвать': 4,\n",
-       "  'покоситься на': 2,\n",
-       "  'попробовать на': 2,\n",
-       "  'портить': 4,\n",
-       "  'посмотреть на': 4,\n",
-       "  'потрепать': 6,\n",
-       "  'походить на': 10,\n",
-       "  'превращаться в': 2,\n",
-       "  'прикрикнуть на': 7,\n",
-       "  'прогнать': 5,\n",
-       "  'пускать с': 2,\n",
-       "  'рассказать о': 2,\n",
-       "  'свистнуть': 9,\n",
-       "  'смотреть на': 14,\n",
-       "  'спасть': 5,\n",
-       "  'таскать': 4,\n",
-       "  'тереть': 35,\n",
-       "  'травить': 13,\n",
-       "  'убить': 6,\n",
-       "  'увидеть': 9,\n",
-       "  'указать на': 2,\n",
-       "  'укусить': 4,\n",
-       "  'уходить с': 2,\n",
-       "  'ходить с': 4,\n",
-       "  'цыкнуть на': 3}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loader(load_words(\"\"))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
