--- a/Exam/Untitled.ipynb
+++ b/Exam/Untitled.ipynb
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -872,6 +872,7 @@
     "    total = 0\n",
     "    index = 0\n",
     "    sphere_data = data[data['sphere']==sphere]\n",
+    "    print(\"Getting data for sphere {}\".format(sphere))\n",
     "    while total < needed_spheres[sphere] and index < len(sphere_data):\n",
     "        sphere_row = sphere_data.iloc[index]\n",
     "        cut_down_by_spheres = cut_down_by_spheres.append(sphere_row)\n",
